--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://redfieldC.github.io/Actify-React-Redux-Project",
-
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -17,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "xlsx": "^0.18.5"
